tests/parser/errors/when.rv
when value 

when value {
    int => print "oui" float => 
}

when value {
    int {}
}

when value {


